--- a/app/src/main/res/layout/fragment_create_youtube_video.xml
+++ b/app/src/main/res/layout/fragment_create_youtube_video.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:bind="http://schemas.android.com/apk/res-auto">
+    xmlns:bind="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="youtubeViewModel"
             type="be.hogent.faith.faith.backpackScreen.youtubeVideo.create.YoutubeVideoDetailViewModel" />
+
         <variable
             name="preview"
             type="be.hogent.faith.faith.backpackScreen.youtubeVideo.create.ShowPreview" />
+
         <import type="android.view.View" />
     </data>
 
@@ -25,13 +28,13 @@
 
 
         <ImageView
-            android:id="@+id/imageView4"
+            android:id="@+id/btn_cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="32dp"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="16dp"
             android:onClick="@{() -> youtubeViewModel.goBackToBackpack()}"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_btn_back_white_ytvideo" />
 
