--- a/app/src/main/res/layout/fragment_view_youtube_video.xml
+++ b/app/src/main/res/layout/fragment_view_youtube_video.xml
@@ -170,9 +170,10 @@
 
             <ImageButton
                 android:id="@+id/btn_back_yt_video"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/material_icon_width"
+                android:layout_height="@dimen/material_icon_height"
                 android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
                 android:backgroundTint="@android:color/transparent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
