--- a/app/src/main/res/layout/backpack_menu_filter.xml
+++ b/app/src/main/res/layout/backpack_menu_filter.xml
@@ -147,7 +147,7 @@
             android:id="@+id/search_close_btn"
             android:layout_width="30dp"
             android:layout_height="30dp"
-
+            android:layout_marginBottom="10dp"
             android:layout_marginEnd="20dp"
             android:backgroundTint="#0000FF"
             android:contentDescription="@string/close_filter_btn"
