Fix remark PR: Added needed dimen

--- a/app/src/main/res/layout/fragment_record_audio.xml
+++ b/app/src/main/res/layout/fragment_record_audio.xml
@@ -35,8 +35,8 @@
             <ImageButton
                 android:layout_width="@dimen/material_icon_width"
                 android:layout_height="@dimen/material_icon_height"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginStart="@dimen/margin_corner_button"
+                android:layout_marginTop="@dimen/margin_corner_button"
                 android:background="@drawable/ic_return"
                 android:contentDescription="@string/cancel"
                 android:onClick="@{() -> audioDetailViewModel.onCancelClicked()}"
@@ -47,8 +47,8 @@
                 android:layout_width="@dimen/material_icon_width"
                 android:layout_height="@dimen/material_icon_height"
                 android:layout_gravity="center"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginTop="@dimen/margin_corner_button"
+                android:layout_marginEnd="@dimen/margin_corner_button"
                 android:background="@drawable/save_btn"
                 android:contentDescription="@string/save"
                 android:onClick="@{() -> audioDetailViewModel.onSaveClicked()}"
