--- a/app/src/main/res/layout/fragment_cinema_start.xml
+++ b/app/src/main/res/layout/fragment_cinema_start.xml
@@ -60,8 +60,8 @@
             android:id="@+id/btn_cinema_cancel"
             android:layout_width="@dimen/material_icon_width"
             android:layout_height="@dimen/material_icon_height"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginStart="@dimen/margin_corner_button"
+            android:layout_marginTop="@dimen/margin_corner_button"
             android:background="@drawable/knop_terug_wit"
             android:contentDescription="@string/cancel"
             android:onClick="@{() -> cinemaOverviewViewModel.goToCityScreen()}"
