--- a/app/src/main/res/layout/fragment_draw.xml
+++ b/app/src/main/res/layout/fragment_draw.xml
@@ -40,8 +40,8 @@
                 android:id="@+id/btn_draw_cancel"
                 android:layout_width="@dimen/material_icon_width"
                 android:layout_height="@dimen/material_icon_height"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
+                android:layout_marginTop="@dimen/margin_corner_button"
+                android:layout_marginBottom="@dimen/margin_corner_button"
                 android:background="@drawable/ic_return"
                 android:contentDescription="@string/cancel"
                 android:onClick="@{() -> drawViewModel.onCancelClicked()}"
@@ -81,7 +81,7 @@
                 android:layout_width="@dimen/material_icon_width"
                 android:layout_height="@dimen/material_icon_height"
                 android:layout_gravity="center"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="@dimen/margin_corner_button"
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/save_btn"
                 android:contentDescription="@string/save"
