--- a/app/src/main/res/layout/fragment_enter_event_details.xml
+++ b/app/src/main/res/layout/fragment_enter_event_details.xml
@@ -40,8 +40,8 @@
                 android:id="@+id/btn_draw_cancel"
                 android:layout_width="@dimen/material_icon_width"
                 android:layout_height="@dimen/material_icon_height"
-                android:layout_marginTop="16dp"
-                android:layout_marginStart="16dp"
+                android:layout_marginTop="@dimen/margin_corner_button"
+                android:layout_marginStart="@dimen/margin_corner_button"
                 android:background="@drawable/ic_return"
                 android:contentDescription="@string/cancel"
                 android:onClick="@{() -> eventViewModel.onBackButtonClicked()}"
@@ -168,8 +168,8 @@
                 android:id="@+id/btn_event_send"
                 android:layout_width="@dimen/material_icon_width"
                 android:layout_height="@dimen/material_icon_height"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginTop="@dimen/margin_corner_button"
+                android:layout_marginEnd="@dimen/margin_corner_button"
                 android:background="@drawable/save_btn"
                 android:visibility="@{eventViewModel.eventDetails.size() > 0 ? View.VISIBLE : View.GONE}"
                 android:minWidth="24dp"
