--- a/app/src/main/res/layout/fragment_enter_text.xml
+++ b/app/src/main/res/layout/fragment_enter_text.xml
@@ -38,8 +38,8 @@
                 android:layout_width="@dimen/material_icon_width"
                 android:layout_height="@dimen/material_icon_height"
                 android:layout_gravity="center"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginTop="@dimen/margin_corner_button"
+                android:layout_marginEnd="@dimen/margin_corner_button"
                 android:background="@drawable/save_btn"
                 android:contentDescription="@string/save"
                 android:elevation="2dp"
@@ -51,8 +51,8 @@
                 android:id="@+id/btn_enter_text_cancel"
                 android:layout_width="@dimen/material_icon_width"
                 android:layout_height="@dimen/material_icon_height"
-                android:layout_marginTop="16dp"
-                android:layout_marginStart="16dp"
+                android:layout_marginTop="@dimen/margin_corner_button"
+                android:layout_marginStart="@dimen/margin_corner_button"
                 android:background="@drawable/ic_return"
                 android:contentDescription="@string/cancel"
                 android:onClick="@{() -> textDetailViewModel.onCancelClicked()}"
