--- a/app/src/main/res/layout/fragment_library_eventdetails.xml
+++ b/app/src/main/res/layout/fragment_library_eventdetails.xml
@@ -65,8 +65,8 @@
                 android:id="@+id/btn_library_eventlist_cancel"
                 android:layout_width="@dimen/material_icon_width"
                 android:layout_height="@dimen/material_icon_height"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginStart="@dimen/margin_corner_button"
+                android:layout_marginTop="@dimen/margin_corner_button"
                 android:background="@drawable/ic_return"
                 android:contentDescription="@string/cancel"
                 app:layout_constraintStart_toStartOf="parent"
