--- a/app/src/main/res/layout/fragment_take_photo.xml
+++ b/app/src/main/res/layout/fragment_take_photo.xml
@@ -48,8 +48,8 @@
             android:id="@+id/btn_takePhoto_cancel"
             android:layout_width="@dimen/material_icon_width"
             android:layout_height="@dimen/material_icon_height"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginStart="@dimen/margin_corner_button"
+            android:layout_marginTop="@dimen/margin_corner_button"
             android:background="@drawable/ic_return"
             android:contentDescription="@string/cancel"
             android:onClick="@{() -> photoViewModel.onCancelClicked()}"
@@ -74,8 +74,8 @@
             android:id="@+id/btn_flipCamera"
             android:layout_width="@dimen/material_icon_width"
             android:layout_height="@dimen/material_icon_height"
-            android:layout_marginStart="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginStart="@dimen/margin_corner_button"
+            android:layout_marginBottom="@dimen/margin_corner_button"
             android:background="@drawable/ic_flip_camera"
             android:contentDescription="@string/cancel"
             android:onClick="@{() -> photoViewModel.onSelfieButtonClicked()}"
@@ -87,8 +87,8 @@
             android:id="@+id/btn_takePhoto_Ok_Save"
             android:layout_width="@dimen/material_icon_width"
             android:layout_height="@dimen/material_icon_height"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginTop="@dimen/margin_corner_button"
+            android:layout_marginEnd="@dimen/margin_corner_button"
             android:background="@drawable/save_btn"
             android:contentDescription="@string/ok"
             android:onClick="@{() -> photoViewModel.onOkPhotoButtonClicked()}"
@@ -100,8 +100,8 @@
             android:id="@+id/btn_takePhoto_NotOk"
             android:layout_width="@dimen/material_icon_width"
             android:layout_height="@dimen/material_icon_height"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="@dimen/margin_corner_button"
+            android:layout_marginBottom="@dimen/margin_corner_button"
             android:background="@drawable/ic_prullenmand"
             android:contentDescription="@string/in_de_prullenmand"
             android:onClick="@{() -> photoViewModel.onNotOkPhotoButtonClicked()}"
