--- a/app/src/main/res/layout/fragment_view_drawing.xml
+++ b/app/src/main/res/layout/fragment_view_drawing.xml
@@ -23,8 +23,8 @@
         <ImageButton
             android:layout_width="@dimen/material_icon_width"
             android:layout_height="@dimen/material_icon_height"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginStart="@dimen/margin_corner_button"
+            android:layout_marginTop="@dimen/margin_corner_button"
             android:background="@drawable/ic_return"
             android:contentDescription="@string/cancel"
             android:onClick="@{() -> drawingDetailViewViewModel.onCancelClicked()}"
