--- a/app/src/main/res/layout/popup_window_cinema.xml
+++ b/app/src/main/res/layout/popup_window_cinema.xml
@@ -33,7 +33,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Extern bestand"
+                android:paddingStart="@dimen/padding_left"
+                android:text="@string/bestand_toevoegen"
                 android:textColor="@color/black" />
         </TableRow>
 
@@ -52,6 +53,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingStart="@dimen/padding_left"
                 android:text="Foto nemen"
                 android:textColor="@color/black" />
         </TableRow>
@@ -71,6 +73,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingStart="@dimen/padding_left"
                 android:text="Tekenen"
                 android:textColor="@color/black" />
         </TableRow>
