--- a/app/src/main/res/layout/fragment_skyscraper_start.xml
+++ b/app/src/main/res/layout/fragment_skyscraper_start.xml
@@ -26,6 +26,7 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView2"
+            android:layout_marginTop="100dp"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
