--- a/app/src/main/res/layout/fragment_skyscraper_goal.xml
+++ b/app/src/main/res/layout/fragment_skyscraper_goal.xml
@@ -8,7 +8,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/skyscraper_create_objective"
+        android:id="@+id/skyscraper_create_goal"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/skyscraper_create_objective_background">
@@ -35,7 +35,7 @@
             app:srcCompat="@drawable/skyscraper_blue" />
 
         <TextView
-            android:id="@+id/skyscraper_objective_description"
+            android:id="@+id/skyscraper_goal_description"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="@drawable/skyscraper_panel_blue"
@@ -54,24 +54,14 @@
 
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_objective_goals"
+            android:id="@+id/rv_goal_actions"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@drawable/rectangle_white"
             app:layout_constraintBottom_toBottomOf="@+id/skyscraper"
             app:layout_constraintEnd_toStartOf="@+id/guide_panel"
             app:layout_constraintStart_toEndOf="@+id/skyscraper"
-            app:layout_constraintTop_toBottomOf="@id/skyscraper_objective_description" />
-
-        <ImageButton
-            android:id="@+id/btn_complete_objective"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/margin_corner_button"
-            android:layout_marginTop="@dimen/margin_corner_button"
-            app:layout_constraintEnd_toEndOf="@+id/rv_objective_goals"
-            app:layout_constraintTop_toBottomOf="@+id/skyscraper_objective_description"
-            android:background="@drawable/ic_complete_objective" />
+            app:layout_constraintTop_toBottomOf="@id/skyscraper_goal_description" />
 
         <ImageButton
             android:id="@+id/btn_add_action"
@@ -80,8 +70,8 @@
             android:layout_marginBottom="@dimen/margin_corner_button"
             android:layout_marginEnd="@dimen/margin_corner_button"
             android:background="@drawable/ic_actie_toevoegen"
-            app:layout_constraintBottom_toBottomOf="@+id/rv_objective_goals"
-            app:layout_constraintEnd_toEndOf="@+id/rv_objective_goals"
+            app:layout_constraintBottom_toBottomOf="@+id/rv_goal_actions"
+            app:layout_constraintEnd_toEndOf="@+id/rv_goal_actions"
              />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
