--- a/app/src/main/res/layout/fragment_skyscraper_goal.xml
+++ b/app/src/main/res/layout/fragment_skyscraper_goal.xml
@@ -26,24 +26,26 @@
 
         <ImageView
             android:id="@+id/skyscraper"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:layout_marginStart="50dp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/guide_skyscraper_end"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/btn_skyscraper_return"
+            app:layout_constraintTop_toBottomOf="@+id/btn_skyscraper_return"
             app:srcCompat="@drawable/skyscraper_blue" />
 
         <TextView
             android:id="@+id/skyscraper_goal_description"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:background="@drawable/skyscraper_panel_blue"
             android:gravity="center"
             android:text="Beschrijving doel"
+            app:layout_constraintBottom_toTopOf="@+id/guide_panel_bottom"
             app:layout_constraintEnd_toStartOf="@+id/guide_panel"
             app:layout_constraintStart_toEndOf="@+id/skyscraper"
-            app:layout_constraintTop_toTopOf="@+id/skyscraper" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guide_panel"
@@ -58,10 +60,11 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@drawable/rectangle_white"
+            android:layout_marginBottom="16dp"
             app:layout_constraintBottom_toBottomOf="@+id/skyscraper"
             app:layout_constraintEnd_toStartOf="@+id/guide_panel"
             app:layout_constraintStart_toEndOf="@+id/skyscraper"
-            app:layout_constraintTop_toBottomOf="@id/skyscraper_goal_description" />
+            app:layout_constraintTop_toTopOf="@+id/guide_panel_bottom" />
 
         <ImageButton
             android:id="@+id/btn_add_action"
@@ -73,7 +76,19 @@
             app:layout_constraintBottom_toBottomOf="@+id/rv_goal_actions"
             app:layout_constraintEnd_toEndOf="@+id/rv_goal_actions"
              />
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guide_panel_bottom"
+            android:layout_width="8dp"
+            android:layout_height="12dp"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.40" />
 
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guide_skyscraper_end"
+            android:layout_width="8dp"
+            android:layout_height="12dp"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.40" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
