--- a/app/src/main/res/layout/skyscraper_rv_blue.xml
+++ b/app/src/main/res/layout/skyscraper_rv_blue.xml
@@ -58,15 +58,17 @@
             app:layout_constraintTop_toTopOf="@+id/guide_panel_top"
             app:srcCompat="@drawable/skyscraper_panel_blue_rv" />
 
-        <TextView
-            android:id="@+id/txt_goal_description"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            app:layout_constraintBottom_toTopOf="@+id/skyscraper_base"
-            app:layout_constraintEnd_toStartOf="@+id/guide_textview_end"
-            app:layout_constraintStart_toStartOf="@+id/guide_textview_start"
-            app:layout_constraintTop_toTopOf="@+id/skyscraper_panel" />
+        <EditText
+        android:id="@+id/txt_goal_description"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:autofillHints="Doelbeschrijving"
+        android:inputType="textMultiLine"
+        app:layout_constraintBottom_toTopOf="@+id/skyscraper_base"
+        app:layout_constraintEnd_toStartOf="@+id/guide_textview_end"
+        app:layout_constraintStart_toStartOf="@+id/guide_textview_start"
+        app:layout_constraintTop_toTopOf="@+id/skyscraper_panel" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guide_textview_start"
