--- a/app/src/main/res/layout/skyscraper_rv_green.xml
+++ b/app/src/main/res/layout/skyscraper_rv_green.xml
@@ -60,10 +60,12 @@
             app:layout_constraintVertical_bias="1.0"
             app:srcCompat="@drawable/skyscraper_panel_green_rv" />
 
-        <TextView
+        <EditText
             android:id="@+id/txt_goal_description"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:autofillHints="Doelbeschrijving"
+            android:inputType="textMultiLine"
             app:layout_constraintEnd_toStartOf="@+id/guide_textview_end"
             app:layout_constraintStart_toStartOf="@+id/guide_textview_start"
             app:layout_constraintTop_toTopOf="@+id/guide_textview_top" />
