--- a/app/src/main/res/layout/fragment_cinema_start.xml
+++ b/app/src/main/res/layout/fragment_cinema_start.xml
@@ -196,7 +196,7 @@
             tools:srcCompat="@drawable/publiek_cinema" />
 
         <ImageButton
-            android:id="@+id/create_film"
+            android:id="@+id/btn_create_film"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
